--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,9 @@
 gitpython>=3.1.30
 matplotlib>=3.3
 numpy>=1.22.2
-#opencv-python>=4.1.1
-opencv-python-headless==4.8.1.78
+opencv-python>=4.1.1
+# Install for systems without display instead of opencv-python
+#opencv-python-headless==4.8.1.78
 Pillow>=10.0.1
 psutil  # system resources
 PyYAML>=5.3.1
